test/invalid/not-a-method.js
function func() { }

var obj = {};

obj.func(); // should fail.
